--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "digiants-agency/fastadminpanel": "^2.0",
+        "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
